force-app/main/default/objects/AI_Prompt_Component__c/AI_Prompt_Component__c.object-meta.xml
<CustomObject>
    <label>Prompt Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prompt Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>