force-app/main/default/objects/AI_Prompt_Component__c/fields/AI_Prompt__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt__c</fullName>
    <label>AI Prompt</label>
    <referenceTo>AI_Prompt__c</referenceTo>
    <relationshipLabel>AI Prompt Components</relationshipLabel>
    <relationshipName>AI_Prompt_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>