force-app/main/default/objects/AI_Prompt_Component__c/fields/Constraint_Value__c.field-meta.xml
<CustomField>
    <fullName>Constraint_Value__c</fullName>
    <label>Constraint Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>