force-app/main/default/objects/AI_Prompt_Component__c/fields/Data_Extraction_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Extraction_Id__c</fullName>
    <label>Data Extraction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>