force-app/main/default/objects/AI_Prompt_Component__c/fields/GPTfy_Sentence__c.field-meta.xml
<CustomField>
    <fullName>GPTfy_Sentence__c</fullName>
    <inlineHelpText>Final statement in the prompt.</inlineHelpText>
    <label>GPTfy Sentence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>