force-app/main/default/objects/AI_Prompt_Component__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chain of Thought</fullName>
            </value>
            <value>
                <fullName>Next Best Action</fullName>
            </value>
            <value>
                <fullName>Draft Email</fullName>
            </value>
            <value>
                <fullName>Sentiment</fullName>
            </value>
            <value>
                <fullName>Sentiment Score</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
                <default>true</default>
                <label>Summary</label>
            </value>
            <value>
                <fullName>Root Cause Analysis</fullName>
            </value>
            <value>
                <fullName>Corrective Action</fullName>
            </value>
            <value>
                <fullName>Intent Analysis</fullName>
            </value>
            <value>
                <fullName>Identify Language</fullName>
            </value>
            <value>
                <fullName>JSON</fullName>
            </value>
            <value>
                <fullName>Identify Product</fullName>
            </value>
            <value>
                <fullName>Identify Request Type</fullName>
            </value>
            <value>
                <fullName>Root Cause Reason</fullName>
            </value>
            <value>
                <fullName>Resolution</fullName>
            </value>
            <value>
                <fullName>Categorize</fullName>
            </value>
            <value>
                <fullName>True or False</fullName>
            </value>
            <value>
                <fullName>Title</fullName>
            </value>
            <value>
                <fullName>Article type</fullName>
            </value>
            <value>
                <fullName>Problem statement</fullName>
            </value>
            <value>
                <fullName>Knowledge URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>