force-app/main/default/objects/AI_Prompt_Component__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 30 Words</fullName>
            </value>
            <value>
                <fullName>Under 60 Words</fullName>
            </value>
            <value>
                <fullName>Under 90 Words</fullName>
            </value>
            <value>
                <fullName>Under 150 Words</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>