force-app/main/default/objects/AI_Prompt_Component__c/fields/Phrase_After_Format__c.field-meta.xml
<CustomField>
    <fullName>Phrase_After_Format__c</fullName>
    <defaultValue>&quot;.&quot;</defaultValue>
    <label>Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>