force-app/main/default/objects/AI_Prompt_Component__c/fields/Phrase_Before_Action__c.field-meta.xml
<CustomField>
    <fullName>Phrase_Before_Action__c</fullName>
    <defaultValue>&quot;Generate a&quot;</defaultValue>
    <label>Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>