force-app/main/default/objects/AI_Prompt_Component__c/fields/Tone__c.field-meta.xml
<CustomField>
    <fullName>Tone__c</fullName>
    <description>Tone=</description>
    <label>Tone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Empathetic</fullName>
            </value>
            <value>
                <fullName>Friendly</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>