force-app/main/default/objects/AI_Prompt_Component__c/fields/User_Customizable__c.field-meta.xml
<CustomField>
    <fullName>User_Customizable__c</fullName>
    <label>User Customizable</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tone</fullName>
            </value>
            <value>
                <fullName>Length</fullName>
            </value>
            <value>
                <fullName>Constraint Value</fullName>
            </value>
            <value>
                <fullName>Format</fullName>
            </value>
            <value>
                <fullName>Language</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>